# ESBackup

./: .flake8  .gitignore  .pylintrc  Cargo.toml  Pipfile  README.md  backup.pl  backup.py  esbackup.py  setup.py
.github/workflows/: main.yml  push.yml
Minsal/: Elasticsearch.pm  Fecha.pm
elastica/: almacenamiento.py  peticiones.py  utilidades.py
esbackup/: almacenamiento.py  cli.py  peticiones.py  utilidades.py
esbackup/test/: test_almacenamiento.py  test_esbackup.py  test_peticiones.py
src/: lib.rs
test/: test_almacenamiento.py  test_backup.py  test_esbackup.py  test_peticiones.py
